CloudAlpacas/salesforce/main/default/objects/Attendance_Record__c/Attendance_Record__c.object-meta.xml
<CustomObject>
    <description>팬의 누적 관람 이력 (팬당 1건)</description>
    <label>Attendance Record</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Attendance Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>