CloudAlpacas/salesforce/main/default/objects/Attendance_Record__c/fields/First_Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Admission_Date__c</fullName>
    <description>첫 입장 날짜</description>
    <inlineHelpText>첫 입장 날짜</inlineHelpText>
    <label>First Admission Date</label>
    <summarizedField>Admission__c.Admission_Time__c</summarizedField>
    <summaryForeignKey>Admission__c.Attendance_Record__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>